--- a/styledrops.css
+++ b/styledrops.css
@@ -25,6 +25,11 @@
     max-width: 100%;
 }
 
+.color-sample:hover {
+    transition: transform 0.3s ease;
+    transform: scale(1.1);
+}
+
 .color-name {
     margin-top: 5px;
 }
@@ -49,7 +54,7 @@
     grid-column: 2 / 5;
     text-align: center;
     font-size: 1.5em;
-    margin: 10px 0;
+    margin: 50px 0;
 }
 
 .mission-text {
